# Brain_Tumor_Detection

./: .gitignore  Brain_Tumor_Detector_trainer.ipynb  README.md  pyproject.toml  requirements.txt  training_requirements.txt  tumor_detector.onnx
api/: index.py
static/css/: styles.css
templates/: index.html
utils/: preprocessing.py
