[project]
name = "brain-tumor-detector"
version = "0.1.0"
description = "API for brain tumor detection"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
fastapi = "0.104.1"
uvicorn = "0.24.0"
numpy = "<2"
onnxruntime = "1.16.3"
python-multipart = "0.0.6"
jinja2 = "3.1.2"
pillow = "10.1.0"
opencv-python-headless = "4.12.0.88"
